--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main class="wrap">
         <section id="home" class="hero">
             <div>
-                <span class="badge">⚡ Electrical • Web Dev • DSA</span>
+                <span class="badge">⚡ Electrical Engg • Web Dev • DSA</span>
                 <h1 class="title">Hey, I'm Aman<br><span class="typing" id="typing"></span></h1>
                 <p class="lead">First-year Electrical Engineering student at PCE Purnea. I build clean, responsive web
                     interfaces and practice solid problem‑solving with C/C++ and DSA.</p>
@@ -149,11 +149,18 @@
             </div>
             <div class="grid">
                 <article class="card">
-                    <h3>Netflix Clone</h3>
-                    <p class="muted">A fully responsive Netflix-inspired web app with movie browsing, interactive UI,
-                        and clean design. Built for performance and smooth streaming experience.</p>
+                    <h3>Github profile finder</h3>
+                    <p class="muted"> A JavaScript-based web app that fetches and displays GitHub user profile details
+                        using the GitHub REST API. Includes inputvalidation, error handling, and dynamic
+                        UI updates.</p>
                     <div class="chips" style="margin-top:8px">
-                        <span class="chip">HTML</span><span class="chip">CSS</span><span class="chip">JS</span>
+                        <span class="chip">HTML</span>
+                        <span class="chip">CSS</span>
+                        <span class="chip">JavaScript</span>
+                        <span class="chip">Rest API</span>
+                        <span class="chip"><a href="https://viewgithubprofile.netlify.app/" target="_blank">View
+                                project</a>
+                        </span>
                     </div>
                 </article>
                 <article class="card">
@@ -171,7 +178,7 @@
 
             </div>
             <p class="muted" style="margin-top:20px; text-align:center;">
-                📌 More details will be updated soon.
+                📌 More project details will be updated soon.
             </p>
 
         </section>
@@ -187,8 +194,14 @@
                         <input class="in" type="email" placeholder="Your Email" required>
                         <textarea class="in" rows="4" placeholder="Message" required></textarea>
                         <button class="btn primary" type="submit">Send Message</button>
-                        <p class="muted">Or reach me directly: <b>theaman.000858@gmail.com</b> • <b>+91 8102542627</b> •
-                            Purnea, Bihar</p>
+                        <p class="muted">Or reach me directly:
+                            <br>
+                            <b>theaman.000858@gmail.com</b>
+                            <br>
+                            <b>+91 8102542627</b>
+                            <br>
+                            Purnea, Bihar
+                        </p>
                     </form>
                 </article>
             </div>
