--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="#skills">Skills</a>
                 <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
-              
+
             </div>
 
             <div class="hamburger" id="hamburger">
@@ -46,10 +46,10 @@
     <main class="wrap">
         <section id="home" class="hero">
             <div>
-                <span class="badge">⚡ Electrical Engg • Web Dev • DSA</span>
+                <span class="badge">⚡ Electrical Engg • Web Dev </span>
                 <h1 class="title">Hey, I'm Aman<br><span class="typing" id="typing"></span></h1>
-                <p class="lead">First-year Electrical Engineering student at PCE Purnea. I build clean, responsive web
-                    interfaces and practice solid problem‑solving with C/C++ and DSA.</p>
+                <p class="lead">Second-year Electrical Engineering student at PCE Purnea. I build clean, responsive web
+                    interfaces and specialize in frontend development with React.js and modern JavaScript.</p>
                 <div class="hero-actions">
                     <button class="btn primary"
                         onclick="document.querySelector('#projects').scrollIntoView({behavior:'smooth'})">See
@@ -71,8 +71,9 @@
                 <article class="card full">
                     <h3>Who am I?</h3>
                     <p class="muted">I'm a curious builder who enjoys turning ideas into polished UIs. Beyond my core
-                        Electrical coursework, I focus on <b>Web Development</b> (HTML, CSS, JavaScript) and <b>DSA in
-                            C++</b>. I value clean code, performance, and delightful micro‑interactions.</p>
+                        Electrical coursework, I specialize in <b>Web Development</b> (React.js, JavaScript, HTML/CSS).
+                        I value clean code, performance, and delightful micro‑interactions.
+                    </p>
                 </article>
             </div>
         </section>
@@ -88,8 +89,8 @@
                     <div class="timeline" style="margin-top:10px">
                         <div class="item"><span class="dot"></span> Semester‑1 focus: Engineering Physics, Programming
                             in C</div>
-                        <div class="item"><span class="dot"></span> Currently strengthening <b>DSA (C++)</b> & <b>Web
-                                Dev</b></div>
+                        <div class="item"><span class="dot"></span> Currently strengthening <b>React.js</b> & <b>Modern
+                                UI/UX</b></div>
                     </div>
                 </article>
                 <article class="card">
@@ -131,13 +132,20 @@
                     <h3>Frontend</h3>
                     <div class="meter" aria-label="HTML"><span style="width:90%"></span></div>
                     <p class="muted" style="margin:6px 0 0">HTML/CSS Basics • 90%</p>
-                    <div class="meter" aria-label="JS" style="margin-top:10px"><span style="width:70%"></span></div>
-                    <p class="muted" style="margin:6px 0 0">JavaScript • 70%</p>
+                    <div class="meter" aria-label="JS" style="margin-top:10px"><span style="width:90%"></span></div>
+                    <p class="muted" style="margin:6px 0 0">JavaScript • 90%</p>
                 </article>
                 <article class="card small">
-                    <h3>DSA</h3>
-                    <div class="meter"><span style="width:60%"></span></div>
-                    <p class="muted" style="margin-top:6px">C++ + DSA Fundamentals • 60%</p>
+                    <h3>Frameworks</h3>
+                    <div class="meter" aria-label="React">
+                        <span style="width:60%; background: #61DAFB; box-shadow: 0 0 10px #61DAFB;"></span>
+                    </div>
+                    <p class="muted" style="margin:6px 0 0">React.js (Hooks, Router) • 60%</p>
+
+                    <div class="meter" aria-label="Tailwind" style="margin-top:10px">
+                        <span style="width:50% "></span>
+                    </div>
+                    <p class="muted" style="margin:6px 0 0">Tailwind CSS • 50%</p>
                 </article>
             </div>
         </section>
