--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 GitHub
             </a>
         </div>
-        <div class="subtext">🚀 More details will be updated soon •</div>
+        <div class="subtext">🚀 More details will be updated soon </div>
 
     </footer>
 
